-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.2
-
Mac 10.9 only
-
-
922c87a3b8ab16b18b2f04c114f6d20ba12e4eb9
If we have the sample code as below,
QString str=QFileDialog::getSaveFileName(0,QString("Save File"), "/Users/qt/example/image.png",QString ("Images(*.png,*.jpg)"));
it doesnt show the file name mentioned but says untitled.
Fixes mention in bug reports QTBUG-27664 / QTBUG-28161 does not help with the file name but launches the correct folder.